# miniscience

./: CMakeLists.txt  README.md
lab_fenics/: heat.py
lab_fenics/heat/: solution000000.vtu  solution000001.vtu  solution000002.vtu  solution000003.vtu  solution000004.vtu  solution000005.vtu  solution000006.vtu  solution000007.vtu  solution000008.vtu  solution000009.vtu  solution000010.vtu  solution000011.vtu  solution000012.vtu  solution000013.vtu  solution000014.vtu  solution000015.vtu  solution000016.vtu  solution000017.vtu  solution000018.vtu  solution000019.vtu  solution000020.vtu  solution000021.vtu  solution000022.vtu  solution000023.vtu  solution000024.vtu  solution000025.vtu  solution000026.vtu  solution000027.vtu  solution000028.vtu  solution000029.vtu  solution000030.vtu  solution000031.vtu  solution000032.vtu  solution000033.vtu  solution000034.vtu  solution000035.vtu  solution000036.vtu  solution000037.vtu  solution000038.vtu  solution000039.vtu  (+60 more)
lab_gmsh/: serpent.cpp  serpent.stl  torus.cpp  torus.stl
lab_vtk/: serpent_vtk.cpp
lab_vtk/serpent_vtu/: serpent-step-1.vtu  serpent-step-10.vtu  serpent-step-18.vtu  serpent-step-19.vtu  serpent-step-22.vtu  serpent-step-24.vtu  serpent-step-25.vtu  serpent-step-27.vtu  serpent-step-29.vtu  serpent-step-31.vtu  serpent-step-32.vtu  serpent-step-33.vtu  serpent-step-36.vtu  serpent-step-4.vtu  serpent-step-40.vtu  serpent-step-42.vtu  serpent-step-45.vtu  serpent-step-46.vtu  serpent-step-48.vtu  serpent-step-51.vtu  serpent-step-53.vtu  serpent-step-54.vtu  serpent-step-56.vtu  serpent-step-59.vtu  serpent-step-6.vtu  serpent-step-63.vtu  serpent-step-64.vtu  serpent-step-65.vtu  serpent-step-69.vtu  serpent-step-7.vtu  serpent-step-70.vtu  serpent-step-73.vtu  serpent-step-74.vtu  serpent-step-75.vtu  serpent-step-78.vtu  serpent-step-80.vtu  serpent-step-82.vtu  serpent-step-83.vtu  serpent-step-84.vtu  serpent-step-85.vtu  (+10 more)
